# SO-SimuladorVonNeumann

./: .gitignore  CMakeLists.txt  Changelog.md  DOCUMENTO.md  HowTo.md  LICENSE  MAKEFILE_COMMANDS.md  Makefile  README.md  process1.json  teste
.devcontainer/: Dockerfile  devcontainer.json
IO/SO-IO/: IOManager.cpp  IOManager.h  Makefile  README.md  io  main.cpp  shared_structs.h
SO-IO/: IOManager.cpp  IOManager.h  README.md  io  main.cpp  shared_structs.h
SO-IO/SO-IO-main/: IOManager.cpp  IOManager.h  main.cpp
SecondMemory/: main.cpp
md/: HASH_REGISTER_IMPROVEMENTS.md
parser_json/: CMakeLists.txt
parser_json/src/: MainMemory.cpp  MainMemory.hpp  main.cpp  parser_json.cpp  parser_json.hpp
src/: main.cpp  test_hash_register.cpp  test_register_bank.cpp  teste.cpp
src/IO/: IOManager.cpp  IOManager.hpp  README.md
src/cpu/: CONTROL_UNIT.cpp  CONTROL_UNIT.hpp  CONTROUL_UNIT.cpp  HASH_REGISTER.hpp  PCB.hpp  REGISTER.hpp  REGISTER_BANK.cpp  REGISTER_BANK.hpp  ULA.cpp  ULA.hpp  pcb_loader.cpp  pcb_loader.hpp
src/cpu/cache/: cache.cpp  cache.hpp  cachePolicy.cpp  cachePolicy.hpp
src/memory/: MAIN_MEMORY.cpp  MAIN_MEMORY.hpp  MemoryManager.cpp  MemoryManager.hpp  SECONDARY_MEMORY.cpp  SECONDARY_MEMORY.hpp  cache.cpp  cache.hpp  cachePolicy.cpp  cachePolicy.hpp
src/memory/SecondMemoryDoJoaquim/: Makefile  SecondMemory.cpp  SecondMemory.hpp
src/parser_json/: parser_json.cpp  parser_json.hpp
src/tasks/: programa_teste.json  tasks.json
src/test/: test_cpu_metrics.cpp  test_hash_register.cpp  test_register_bank.cpp
test/: test_cpu_metrics.cpp
